--- a/demo/index.html
+++ b/demo/index.html
@@ -6,23 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
     <meta name="renderer" content="webkit">
     <!-- 浏览器标签图片 -->
-    <link rel="shortcut icon" href="/topjui/image/favicon.ico"/>
+    <link rel="shortcut icon" href="./topjui/image/favicon.ico"/>
     <!-- EasyUI样式 -->
-    <link type="text/css" rel="stylesheet" id="easyuiTheme" href="/topjui/themes/default/easyui.css">
+    <link type="text/css" rel="stylesheet" id="easyuiTheme" href="./topjui/themes/default/easyui.css">
     <!-- TopJUI样式 -->
-    <link type="text/css" rel="stylesheet" href="/topjui/css/topjui.all.min.css">
+    <link type="text/css" rel="stylesheet" href="./topjui/css/topjui.all.min.css">
     <!-- jQuery核心 -->
-    <script type="text/javascript" src="/topjui/plugins/jquery/jquery.min.js"></script>
-    <script type="text/javascript" src="/topjui/plugins/jquery/jquery.cookie.js"></script>
+    <script type="text/javascript" src="./topjui/plugins/jquery/jquery.min.js"></script>
+    <script type="text/javascript" src="./topjui/plugins/jquery/jquery.cookie.js"></script>
     <!-- EasyUI核心 -->
-    <script type="text/javascript" src="/topjui/plugins/easyui/jquery.easyui.min.js"></script>
-    <script type="text/javascript" src="/topjui/plugins/easyui/easyui-lang-zh_CN.js"></script>
+    <script type="text/javascript" src="./topjui/plugins/easyui/jquery.easyui.min.js"></script>
+    <script type="text/javascript" src="./topjui/plugins/easyui/easyui-lang-zh_CN.js"></script>
     <!-- TopJUI配置 -->
-    <script type="text/javascript" src="/topjui/js/topjui.config.js"></script>
+    <script type="text/javascript" src="./topjui/js/topjui.config.js"></script>
     <!-- TopJUI框架 -->
-    <script type="text/javascript" src="/topjui/js/topjui.all.js"></script>
+    <script type="text/javascript" src="./topjui/js/topjui.all.js"></script>
     <!-- 首页js -->
-    <script type="text/javascript" src="/topjui/js/topjui.index.js" charset="utf-8"></script>
+    <script type="text/javascript" src="./topjui/js/topjui.index.js" charset="utf-8"></script>
     <title>TopJUI前端框架 - 静态演示</title>
 </head>
 
