--- a/demo/index.html
+++ b/demo/index.html
@@ -191,9 +191,7 @@
     <div data-options="region:'center',border:true">
         <div id="index_tabs" style="width:100%;height:100%">
             <div title="系统首页" iconCls="icon-house" data-options="border:false,
-            content:'<iframe src=\'./html/portal/index.html\' scrolling=\'auto\' frameborder=\'0\' style=\'width:100%;height:100%;\'></iframe>'">
-
-            </div>
+            content:'<iframe src=\'./html/portal/index.html\' scrolling=\'auto\' frameborder=\'0\' style=\'width:100%;height:100%;\'></iframe>'"></div>
         </div>
     </div>
     <div data-options="region:'south',border:true"
