--- a/demo/html/article/detail.html
+++ b/demo/html/article/detail.html
@@ -5,11 +5,10 @@
     <!-- 避免IE使用兼容模式 -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
     <meta name="renderer" content="webkit">
-    <link rel="stylesheet" type="text/css" href="/topjui/plugins/layui/css/layui.css">
-    <script type="text/javascript" src="/topjui/plugins/jquery/jquery.min.js"></script>
-    <script type="text/javascript" src="/topjui/plugins/topjui/topjui.function.js"></script>
-    <script type="text/javascript" src="/topjui/plugins/layui/layui.js"></script>
-
+    <link rel="stylesheet" type="text/css" href="../../topjui/plugins/layui/css/layui.css">
+    <script type="text/javascript" src="../../topjui/plugins/jquery/jquery.min.js"></script>
+    <script type="text/javascript" src="../../topjui/plugins/topjui/topjui.function.js"></script>
+    <script type="text/javascript" src="../../topjui/plugins/layui/layui.js"></script>
     <style>
         body {
             margin: 10px;
