--- a/demo/html/complex/edit.html
+++ b/demo/html/complex/edit.html
@@ -35,7 +35,7 @@
             <input type="text" name="spec"
                    data-toggle="topjui-combobox"
                    data-options="valueField:'code',
-                   url:'/json/dictionary/models.json'">
+                   url:contextPath + '/json/dictionary/models.json'">
         </td>
     </tr>
     <tr>
@@ -46,7 +46,7 @@
             <input type="text" name="recommend"
                    data-toggle="topjui-combobox"
                    data-options="valueField:'code',
-                   url:'/json/dictionary/yesOrNo.json'">
+                   url:contextPath + '/json/dictionary/yesOrNo.json'">
         </td>
     </tr>
     <tr>
