--- a/demo/html/form/combobox.html
+++ b/demo/html/form/combobox.html
@@ -34,7 +34,7 @@
             <input type="text" name="nativePlace"
                    data-toggle="topjui-combobox"
                    data-options="panelHeight:250,
-                   url:'/json/combobox/nativePlace.json'">
+                   url:contextPath + '/json/combobox/nativePlace.json'">
         </td>
         <td class="label">民族（必填）</td>
         <td>
@@ -42,7 +42,7 @@
                    data-toggle="topjui-combobox"
                    data-options="required:true,
                    panelHeight:250,
-                   url:'/json/combobox/nation.json'">
+                   url:contextPath + '/json/combobox/nation.json'">
         </td>
     </tr>
 </table>
