--- a/demo/html/form/combotree_index.html
+++ b/demo/html/form/combotree_index.html
@@ -81,10 +81,10 @@
        data-options="clickEvent:'openDialog',
        dialog:{
            id:'userAddDialog',
-           href:'/html/form/combotree.html',
+           href:contextPath + '/html/form/combotree.html',
            height:450,
            buttonsGroup:[
-               {text:'保存',url:'/json/response/success.json',iconCls:'icon-add',handler:'ajaxForm'}
+               {text:'保存',url:contextPath + '/json/response/success.json',iconCls:'icon-add',handler:'ajaxForm'}
            ]
        }">树形下拉演示</a>
 </div>
