--- a/demo/html/menu/openTab_index.html
+++ b/demo/html/menu/openTab_index.html
@@ -48,7 +48,7 @@
        data-options="clickEvent:'openTab',
        tab:{
            title:'新Tab窗口',
-           href:'/html/menu/openTab_index.html'
+           href:contextPath + '/html/menu/openTab_index.html'
        }">打开Tab窗口</a>
 </div>
 
