--- a/demo/html/extend/editor_index.html
+++ b/demo/html/extend/editor_index.html
@@ -51,7 +51,7 @@
        data-options="clickEvent:'openDialog',
        dialog:{
            id:'userAddDialog',
-           href:'/html/extend/editor.html',
+           href:contextPath + '/html/extend/editor.html',
            width:900,
            height:500,
            editor:[
@@ -59,7 +59,7 @@
 			   {id:'contentAddEditor',field:'content'}
 		   ],
            buttonsGroup:[
-               {text:'保存',url:'/json/response/success.json',iconCls:'icon-add',handler:'ajaxForm'}
+               {text:'保存',url:contextPath + '/json/response/success.json',iconCls:'icon-add',handler:'ajaxForm'}
            ]
        }">打开文字编辑器窗口</a>
 </div>
