--- a/demo/html/form/input_index.html
+++ b/demo/html/form/input_index.html
@@ -48,10 +48,10 @@
        data-options="clickEvent:'openDialog',
        dialog:{
            id:'userAddDialog',
-           href:'/html/form/input.html',
+           href:contextPath + '/html/form/input.html',
            height:450,
            buttonsGroup:[
-               {text:'保存',url:'/json/response/success.json',iconCls:'icon-add',handler:'ajaxForm'}
+               {text:'保存',url:contextPath + '/json/response/success.json',iconCls:'icon-add',handler:'ajaxForm'}
            ]
        }">文本输入演示</a>
 </div>
