--- a/demo/html/menu/openDialog_index.html
+++ b/demo/html/menu/openDialog_index.html
@@ -48,7 +48,7 @@
        data-options="clickEvent:'openDialog',
        dialog:{
            id:'addDialog',
-           href:'/html/form/input.html',
+           href:contextPath + '/html/form/input.html',
            height:450,
            width:700,
            buttonsGroup:[
