--- a/demo/html/menu/request_index.html
+++ b/demo/html/menu/request_index.html
@@ -46,7 +46,7 @@
     <a href="javascript:void(0)"
        data-toggle="topjui-menubutton"
        data-options="clickEvent:'request',
-       url:'/json/response/success.json'">执行普通请求</a>
+       url:contextPath + '/json/response/success.json'">执行普通请求</a>
 </div>
 
 </body>
