--- a/demo/html/portal/index_eui.html
+++ b/demo/html/portal/index_eui.html
@@ -119,28 +119,28 @@
             <div style="width:35%;">
                 <div title="公告通知" iconCls="icon-dic" style="height:210px;">
                     <div class="portal-list">
-                        <a href="javascript:window.parent.addParentTab({href:'/html/article/detail.html',title:'强化党内监督是全面从严治党重要保障'})">强化党内监督是全面从严治党重要保障</a>
+                        <a href="javascript:window.parent.addParentTab({href:contextPath + '/html/article/detail.html',title:'强化党内监督是全面从严治党重要保障'})">强化党内监督是全面从严治党重要保障</a>
                     </div>
                     <div class="portal-list">
-                        <a href="javascript:window.parent.addParentTab({href:'/html/article/detail.html',title:'李克强：地方和部门主要负责同志要带头发布权威信息'})">李克强：地方和部门主要负责同志要带头发布权威信息</a>
+                        <a href="javascript:window.parent.addParentTab({href:contextPath + '/html/article/detail.html',title:'李克强：地方和部门主要负责同志要带头发布权威信息'})">李克强：地方和部门主要负责同志要带头发布权威信息</a>
                     </div>
                     <div class="portal-list">
-                        <a href="javascript:window.parent.addParentTab({href:'/html/article/detail.html',title:'李克强：政务公开是常态不公开是例外'})">李克强：政务公开是常态不公开是例外</a>
+                        <a href="javascript:window.parent.addParentTab({href:contextPath + '/html/article/detail.html',title:'李克强：政务公开是常态不公开是例外'})">李克强：政务公开是常态不公开是例外</a>
                     </div>
                     <div class="portal-list">
-                        <a href="javascript:window.parent.addParentTab({href:'/html/article/detail.html',title:'军委机关将总体实行“部—局—处”三级体制'})">军委机关将总体实行“部—局—处”三级体制</a>
+                        <a href="javascript:window.parent.addParentTab({href:contextPath + '/html/article/detail.html',title:'军委机关将总体实行“部—局—处”三级体制'})">军委机关将总体实行“部—局—处”三级体制</a>
                     </div>
                     <div class="portal-list">
-                        <a href="javascript:window.parent.addParentTab({href:'/html/article/detail.html',title:'蔡奇就任北京代市长 王安顺因工作调动请辞'})">蔡奇就任北京代市长
+                        <a href="javascript:window.parent.addParentTab({href:contextPath + '/html/article/detail.html',title:'蔡奇就任北京代市长 王安顺因工作调动请辞'})">蔡奇就任北京代市长
                             王安顺因工作调动请辞</a>
                     </div>
                     <div class="portal-list">
-                        <a href="javascript:window.parent.addParentTab({href:'/html/article/detail.html',title:'问中国：民生保障不是“清谈馆”办好实事方能得民心'})">问中国：民生保障不是“清谈馆”办好实事方能得民心</a>
+                        <a href="javascript:window.parent.addParentTab({href:contextPath + '/html/article/detail.html',title:'问中国：民生保障不是“清谈馆”办好实事方能得民心'})">问中国：民生保障不是“清谈馆”办好实事方能得民心</a>
                     </div>
                 </div>
                 <div title="内容分布" iconCls="icon-chart_pie" style="height:430px;">
                     <div id="agePieChartData" data-toggle="topjui-echarts"
-                         data-options="type:'pie',url:'/json/chart/pie.json'"
+                         data-options="type:'pie',url:contextPath + '/json/chart/pie.json'"
                          style="width:99%;height:99%;"></div>
                 </div>
             </div>
@@ -150,7 +150,7 @@
                            data-options="fit:true,
                            border:false,
                            fitColumns:true,
-                           url:'/json/datagrid/user.json'">
+                           url:contextPath + '/json/datagrid/user.json'">
                         <thead>
                         <tr>
                             <th field="userNameId" width="100">用户名</th>
@@ -166,7 +166,7 @@
                            data-options="fit:true,
                            border:false,
                            fitColumns:true,
-                           url:'/json/datagrid/member.json'">
+                           url:contextPath + '/json/datagrid/member.json'">
                         <thead>
                         <tr>
                             <th field="userNameId" width="100">用户名</th>
