--- a/demo/html/extend/editor_index.html
+++ b/demo/html/extend/editor_index.html
@@ -14,11 +14,12 @@
     <script type="text/javascript" src="../../topjui/plugins/jquery/jquery.cookie.js"></script>
     <!-- EasyUI核心 -->
     <script type="text/javascript" src="../../topjui/plugins/easyui/jquery.easyui.min.js"></script>
-    <script type="text/javascript" src="../../topjui/plugins/easyui/easyui-lang-zh_CN.js"></script>
     <!-- TopJUI配置 -->
     <script type="text/javascript" src="../../topjui/js/topjui.config.js"></script>
     <!-- TopJUI框架 -->
     <script type="text/javascript" src="../../topjui/js/topjui.all.js"></script>
+    <!-- EasyUI汉化 -->
+    <script type="text/javascript" src="../../topjui/plugins/easyui/easyui-lang-zh_CN.js"></script>
     <!-- Ueditor编辑器插件 -->
     <script type="text/javascript" src="../../topjui/plugins/ueditor/utf8-jsp/1.4.3.3/ueditor.config.js"></script>
     <script type="text/javascript" src="../../topjui/plugins/ueditor/utf8-jsp/1.4.3.3/ueditor.all.min.js"></script>
