--- a/demo/html/form/combogrid_index.html
+++ b/demo/html/form/combogrid_index.html
@@ -14,11 +14,12 @@
     <script type="text/javascript" src="../../topjui/plugins/jquery/jquery.cookie.js"></script>
     <!-- EasyUI核心 -->
     <script type="text/javascript" src="../../topjui/plugins/easyui/jquery.easyui.min.js"></script>
-    <script type="text/javascript" src="../../topjui/plugins/easyui/easyui-lang-zh_CN.js"></script>
     <!-- TopJUI配置 -->
     <script type="text/javascript" src="../../topjui/js/topjui.config.js"></script>
     <!-- TopJUI框架 -->
     <script type="text/javascript" src="../../topjui/js/topjui.all.js"></script>
+    <!-- EasyUI汉化 -->
+    <script type="text/javascript" src="../../topjui/plugins/easyui/easyui-lang-zh_CN.js"></script>
 </head>
 
 <body>
