--- a/demo/html/complex/datagrid.html
+++ b/demo/html/complex/datagrid.html
@@ -69,7 +69,7 @@
        data-toggle="topjui-menubutton"
        data-options="clickEvent:'doAjax',
        url:contextPath + '/json/response/success.json',
-       grid: {uncheckedMsg:'请先勾选要删除的数据',params:'uuid:uuid,code:code'}">删除</a>
+       grid: {uncheckedMsg:'请先勾选要删除的数据',param:'uuid:uuid,code:code'}">删除</a>
     <a href="javascript:void(0)"
        data-toggle="topjui-menubutton"
        data-options="clickEvent:'filter'">过滤</a>
