--- a/demo/index.html
+++ b/demo/index.html
@@ -18,7 +18,9 @@
     <script type="text/javascript" src="./topjui/plugins/easyui/jquery.easyui.min.js"></script>
     <!-- 首页js -->
     <script type="text/javascript" src="./topjui/js/topjui.index.js" charset="utf-8"></script>
-    <title>TopJUI前端框架 - 静态演示</title>
+    <meta name="keywords" content='easyui,jui,jquery easyui,easyui demo,easyui中文'/>
+    <meta name="description" content='TopJUI前端框架，基于最新版EasyUI前端框架构建，纯HTML调用功能组件，不用写JS代码的EasyUI，专注你的后端业务开发！'/>
+    <title>TopJUI前端框架静态演示 - 不用写JS代码的EasyUI</title>
 </head>
 
 <body>
