--- a/demo/index.html
+++ b/demo/index.html
@@ -194,8 +194,8 @@
         <input type="hidden" id="userNameId" name="userNameId" value="${userNameId}"/>
         <span style="float:left;padding-left:5px;width:30%;text-align: left;">当前用户：TopJUI前端框架</span>
         <span style="padding-right:5px;width:40%">
-            版权所有 © 2013-2016
-            <a href="http://www.ewsd.cn" target="_blank">易网时代（深圳）信息技术有限公司</a>
+            版权所有 © 2014-2017
+            <a href="http://www.ewsd.cn" target="_blank">深圳易网时代信息技术有限公司</a>
             <a href="http://www.miitbeian.gov.cn" target="_blank">粤ICP备16028103号-1</a>
         </span>
         <span style="float:right;padding-right:5px;width:30%;text-align: right;">企业正式版 V2.3(20161205)</span>
