--- a/demo/index.html
+++ b/demo/index.html
@@ -131,39 +131,39 @@
         <div id="topMenu">
             <ul>
                 <li>
-                    <a data-menuid="1325" class="systemName" href="javascript:void(0)">
+                    <a data-menuid="1325" class="systemName" style="z-index: 999;" href="javascript:void(0)">
                         <span class="topmenu-icon icon-piechart"></span>
-                        <span class="tabs-title topmenu-with-icon">静态演示</span>
+                        <span data-menuid="1325" class="tabs-title topmenu-with-icon">静态演示</span>
                     </a>
                 </li>
                 <li>
-                    <a data-menuid="60" class="systemName" href="javascript:void(0)">
+                    <a data-menuid="60" class="systemName" style="z-index: 999;" href="javascript:void(0)">
                         <span class="topmenu-icon icon-book"></span>
-                        <span class="tabs-title topmenu-with-icon">开发文档</span>
+                        <span data-menuid="60" class="tabs-title topmenu-with-icon">开发文档</span>
                     </a>
                 </li>
                 <li>
                     <a data-menuid="" class="systemName" href="javascript:void(0)">
                         <span class="topmenu-icon icon-user"></span>
-                        <span class="tabs-title topmenu-with-icon">人力资源</span>
+                        <span data-menuid="" class="tabs-title topmenu-with-icon">人力资源</span>
                     </a>
                 </li>
                 <li>
                     <a data-menuid="" class="systemName" href="javascript:void(0)">
                         <span class="topmenu-icon icon-database_table"></span>
-                        <span class="tabs-title topmenu-with-icon">财务管理</span>
+                        <span data-menuid="" class="tabs-title topmenu-with-icon">财务管理</span>
                     </a>
                 </li>
                 <li>
                     <a data-menuid="" class="systemName" href="javascript:void(0)">
                         <span class="topmenu-icon icon-calendar"></span>
-                        <span class="tabs-title topmenu-with-icon">业务系统</span>
+                        <span data-menuid="" class="tabs-title topmenu-with-icon">业务系统</span>
                     </a>
                 </li>
                 <li>
                     <a data-menuid="" class="systemName" href="javascript:void(0)">
                         <span class="topmenu-icon icon-cog"></span>
-                        <span class="tabs-title topmenu-with-icon">系统设置</span>
+                        <span data-menuid="" class="tabs-title topmenu-with-icon">系统设置</span>
                     </a>
                 </li>
             </ul>
