--- a/demo/html/portal/index.html
+++ b/demo/html/portal/index.html
@@ -155,7 +155,7 @@
                                     系统简介：<a href="http://www.ewsd.cn/emis.html" target="_blank">企业级快速开发平台</a>
                                 </li>
                                 <li>
-                                    演示地址：<a href="http://demo.ewsd.cn/system/index/index" target="_blank">http://demo.ewsd.cn/system/index/index</a>
+                                    演示地址：<a href="http://demo.ewsd.cn/" target="_blank">http://demo.ewsd.cn</a>
                                 </li>
                                 <li>
                                     帐号：topjui，密码：topjui
