--- a/demo/html/portal/index.html
+++ b/demo/html/portal/index.html
@@ -93,7 +93,7 @@
                                 <li>开源下载：<a href="http://git.oschina.net/xvpindex/TopJUI" target="_blank">http://git.oschina.net/xvpindex/TopJUI</a>
                                 </li>
                                 <li>官方网站：<a href="http://www.topjui.com" target="_blank">http://www.topjui.com</a></li>
-                                <li>开发文档：<a href="http://www.topjui.com/doc/start/guider.html" target="_blank">http://www.topjui.com/doc/start/guider.html</a>
+                                <li>开发文档：<a href="http://www.topjui.com/document/index/index.html" target="_blank">http://www.topjui.com/document/index/index.html</a>
                                 </li>
                                 <li>交流讨论：<a target="_blank"
                                             href="//shang.qq.com/wpa/qunwpa?idkey=625ca4e1e6ca0b06cc18e4b7b1efcad50c21dd1d5cc350bf13123b07991e6292"><img
